k8s/base/text-to-image-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: text-to-image-api-service
  namespace: text-to-image-service
  labels:
    app.kubernetes.io/name: text-to-image-api
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app: text-to-image-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
